--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
 
+spring.view.prefix: /WEB-INF/jsp/
+spring.view.suffix: .jsp
