--- a/pom.xml
+++ b/pom.xml
@@ -77,8 +77,18 @@
             <artifactId>guava</artifactId>
             <version>18.0</version>
         </dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.4.0</version>
+		</dependency>
 
-    </dependencies>
+	</dependencies>
 	
 	<build>
 		<plugins>
