--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost/rb
 spring.datasource.username=username
 spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.EJB3NamingStrategy
 
